[package]
name = "nt_version"
description = "Queries the major, minor and build version of Windows (NT) efficiently."
version = "0.1.0"
authors = ["viri <git@stuff.moe>"]
documentation = "https://docs.rs/nt_version/"
homepage = "https://github.com/notviri/nt_version"
repository = "https://github.com/notviri/nt_version"
license = "Unlicense"
edition = "2018"

[dependencies]
winapi = { version = "0.3", features = ["libloaderapi"], optional = true }

[features]
default = []
fallback = ["winapi"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
