[package]
name = "nt_version"
description = "Queries the major, minor and build version of Windows (NT) efficiently."
version = "0.1.3"
authors = ["viri <git@stuff.moe>"]
documentation = "https://docs.rs/nt_version/"
homepage = "https://github.com/notviri/nt_version"
repository = "https://github.com/notviri/nt_version"
keywords = ["windows", "nt", "version", "win32", "OS"]
categories = ["external-ffi-bindings", "no-std", "os::windows-apis"]
license = "Unlicense"
edition = "2018"

[dependencies]
winapi = { version = "0.3", features = ["libloaderapi"], optional = true }

[features]
default = []
fallback = ["winapi"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
